--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "mongoose": "^4.9.2",
     "mongoose-url-slugs": "^0.2.1",
     "nodemon": "^1.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-mocha": "^4.9.0"
   }
 }
